plugins {
    id 'java'
}

allprojects {
    group = 'com.example'
    version = '0.1.0'
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
        sourceCompatibility = '17'
        targetCompatibility = '17'
    }
}
